Change ToTitle so that combined uppercase characters (e.g. DZ) are unchanged. Bug 202208, r=jshin, sr=rbs